# dumbcloud

./: CMakeLists.txt  README.md
data/: server_cfg_example.json
dumbcloud_client/: CMakeLists.txt
dumbcloud_client/dumbcloud_client_go/: CMakeLists.txt  dumbcloud_client_go.cpp
dumbcloud_client/include/dumbcloud_client/: dumbcloud_client.h
dumbcloud_gui/: README.md
dumbcloud_server/: CMakeLists.txt
dumbcloud_server/dumbcloud_server_go/: CMakeLists.txt  dumbcloud_server_go.cpp
dumbcloud_server/include/dumbcloud_server/: dumbcloud_server.h
dumbcloud_server/src/: dumbcloud_server.cpp
dumbcloud_utils/: CMakeLists.txt
dumbcloud_utils/include/dumbcloud_utils/: dumbcloud_utils.h  journal.h
dumbcloud_utils/src/: dumbcloud_utils.cpp  journal.cpp
